# fluidbox

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  justfile  run-agent.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  k8s-ci-postgres.yaml  kind-calico.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  k8s.yml  release.yml
apps/web/: README.md  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  vitest.config.ts
apps/web/app/: geist.css  globals.css  layout.tsx  page.tsx
crates/fluidbox-catalog-import/: Cargo.toml
crates/fluidbox-catalog-import/src/: lib.rs  main.rs  tests.rs
crates/fluidbox-cli/: Cargo.toml
crates/fluidbox-cli/src/: main.rs
crates/fluidbox-core/: Cargo.toml
crates/fluidbox-core/src/: capability.rs  event.rs  lib.rs  netpolicy.rs  policy.rs  schedule.rs  schema_guard.rs  spec.rs  state.rs  tools.rs  traits.rs  usage.rs
crates/fluidbox-db/: Cargo.toml
crates/fluidbox-db/src/: governance.rs  identity.rs  lib.rs  mcp_sessions.rs  seed.rs  system_worker.rs
crates/fluidbox-loadgen/: Cargo.toml
crates/fluidbox-loadgen/src/: client.rs  fakes.rs  guard.rs  main.rs  metrics.rs  report.rs  rng.rs  seed.rs
crates/fluidbox-loadgen/src/scenarios/: approvals.rs  concurrent.rs  connections.rs  mod.rs  upstream.rs
crates/fluidbox-provider/: Cargo.toml
crates/fluidbox-provider-k8s/: Cargo.toml
crates/fluidbox-provider-k8s/src/: config.rs  lib.rs  manifest.rs  netpol.rs
crates/fluidbox-provider/src/: lib.rs  workspace.rs
crates/fluidbox-server/: Cargo.toml
crates/fluidbox-server/src/: admin_orgs.rs  api.rs  auth.rs  bindings.rs  broker.rs  callback.rs  capabilities.rs  catalog.rs  config.rs  connections.rs  deliveries.rs  egress.rs  error.rs  events.rs  facade.rs  github_app.rs  governor.rs  harness.rs  internal.rs  kms.rs  ledger.rs  llm_keys.rs  login.rs  main.rs  mcp_sse.rs  metrics.rs  oauth.rs  orchestrator.rs  rbac.rs  reseal.rs  run_service.rs  scheduler.rs  seal.rs  snapshots.rs  sse.rs  state.rs  tokens.rs  triggers.rs  workers.rs
crates/fluidbox-server/src/connectors/: github.rs  mod.rs
crates/fluidbox-workspace/: Cargo.toml
crates/fluidbox-workspace/src/: archive.rs  collect.rs  lib.rs  sigv4.rs  store.rs
crates/workspaced/: Cargo.toml
crates/workspaced/src/: main.rs
deploy/: docker-compose.dev.yml  docker-compose.eval.yml  server.Dockerfile  web.Dockerfile  workspaced.Dockerfile
deploy/helm/: chart-assertions.sh
deploy/helm/fluidbox/: Chart.yaml  values.yaml
deploy/helm/test-values/: assert.yaml
deploy/litellm/: config.yaml
docs/: ARCHITECTURE.md  HANDOVER.md
docs/guides/: capabilities.md  kubernetes.md  policies.md  triggers.md
docs/handovers/: 2026-07-10-phase4-session-brief.md  2026-07-10-phase5-session-brief.md  2026-07-10-phase6-session-brief.md  2026-07-11-connector-catalog-session-brief.md  2026-07-12-phase6-session-brief.md  2026-07-13-product-governance-gtm-session-brief.md  2026-07-14-codex-mcp-debug-catalog-session.md  2026-07-20-phase-d-handover.md  2026-07-21-phase-e-handover.md  2026-07-21-phase-f-handover.md
docs/hosted/: README.md  connector-admission-policy.md  kms-operations.md  network-architecture.md  product-compatibility-matrix.md  rollout-gates.md  threat-model.md
docs/plans/: 2026-07-10-agent-workspaces-triggers-integrations-design.md  2026-07-11-dashboard-redesign-design.md  2026-07-11-github-seamless-connect-design.md  2026-07-12-phase6-codex-harness-design.md  2026-07-14-db-native-policies-design.md  2026-07-14-governance-page-design.md  2026-07-14-governance-page-implementation.md  2026-07-14-kubernetes-native-execution-design.md  2026-07-14-multi-user-mcp-control-plane-design.md  2026-07-15-kubernetes-native-provider-design.md  2026-07-15-run-composer-pickers-design.md  2026-07-15-run-composer-pickers-implementation.md  2026-07-17-idp-agnostic-identity-design.md
docs/research/: 2026-07-10-mcp-ecosystem-findings.md  2026-07-11-connector-catalog-oauth-findings.md  2026-07-12-codex-app-server-protocol.md
docs/reviews/: 2026-07-10-phase4-review-findings.md  2026-07-16-pr47-batch2-design-consult.md  2026-07-16-pr47-continuance-handover.md  2026-07-16-pr47-fix-handover.md  2026-07-16-pr47-k8s-review-findings.md  2026-07-17-eks-acceptance-handover.md  2026-07-17-eks-acceptance.md  2026-07-21-phase-e-review-prompt.md  2026-07-22-eks-acceptance-phase-f.md
docs/superpowers/plans/: 2026-07-10-6a-hardening.md  (+6 more)
images/: .dockerignore
images/codex-runner/: Dockerfile  config.toml  entrypoint.sh
images/runner-lib/: broker-shim.mjs  contract.mjs  entrypoint.sh  entrypoint.test.mjs  sandbox-gate-shim.mjs
images/sandbox-runner/: Dockerfile
migrations/: 0001_init.sql  0002_connected_workspaces.sql  0003_triggers.sql  0004_schedules.sql  0005_github_events.sql  0006_capability_bundles.sql  0007_connector_catalog.sql  0008_github_app_registrations.sql  0009_catalog_provenance.sql  0010_policy_managed_overrides.sql  0011_finalization_intent.sql  0012_identity_layer.sql  0013_run_resource_bindings.sql  0014_envelope_seal.sql  0015_oauth_client_registrations.sql  0016_connector_oauth_flows.sql  0017_tenant_llm_keys.sql  0018_rls_enforcement.sql  0019_tool_execution_claims.sql  0020_token_audience.sql  0021_replica_coordination.sql  0022_llm_reservations.sql  0023_egress_governance.sql  0024_mcp_upstream_sessions.sql  0025_workload_identity.sql
policies/: default.yaml
scripts/: bindings-e2e.sh  db-clean-tests.sh  db-clean.sh  doctor.sh  e2e-capabilities.sh  e2e-codex-live.sh  e2e-codex-replay.sh  e2e-codex.sh  e2e-connectors.sh  e2e-failures.sh  e2e-git-workspace.sh  e2e-github.sh  e2e-lib.sh  e2e-live.sh  e2e-schedule.sh  e2e-trigger.sh  e2e.sh  eks-cluster.yaml  eks-gp3-storageclass.yaml  eks-teardown.sh  governance-e2e.sh  hardening-e2e.sh  identity-e2e.sh  k8s-dev.sh  k8s-doctor.sh  neon-setup.sh  policy-sync.sh  scale-e2e.sh  secrets-e2e.sh  setup.sh
(+74 files in other folders)
