[workspace]
resolver = "2"
members = [
    "crates/fluidbox-core",
    "crates/fluidbox-db",
    "crates/fluidbox-provider",
    "crates/fluidbox-server",
    "crates/fluidbox-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hrishikeshdkakkad/fluidbox"

[workspace.dependencies]
fluidbox-core = { path = "crates/fluidbox-core" }
fluidbox-db = { path = "crates/fluidbox-db" }
fluidbox-provider = { path = "crates/fluidbox-provider" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
    "derive",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "stream",
] }
bollard = "0.21"
sha2 = "0.11"
hmac = "0.12"
hex = "0.4"
globset = "0.4"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
async-trait = "0.1"
dotenvy = "0.15"
chacha20poly1305 = "0.10"
base64 = "0.22"
jsonwebtoken = "9"
