[workspace]
resolver = "2"
members = [
    "crates/fluidbox-core",
    "crates/fluidbox-db",
    "crates/fluidbox-workspace",
    "crates/fluidbox-provider",
    "crates/fluidbox-provider-k8s",
    "crates/workspaced",
    "crates/fluidbox-server",
    "crates/fluidbox-cli",
    "crates/fluidbox-catalog-import",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hrishikeshdkakkad/fluidbox"

[workspace.dependencies]
fluidbox-core = { path = "crates/fluidbox-core" }
fluidbox-db = { path = "crates/fluidbox-db" }
fluidbox-workspace = { path = "crates/fluidbox-workspace" }
fluidbox-provider = { path = "crates/fluidbox-provider" }
fluidbox-provider-k8s = { path = "crates/fluidbox-provider-k8s" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.7", features = ["trace"] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
    "derive",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "stream",
] }
bollard = "0.21"
sha2 = "0.11"
hmac = "0.13"
getrandom = "0.3"
hex = "0.4"
globset = "0.4"
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
async-trait = "0.1"
dotenvy = "0.15"
chacha20poly1305 = "0.11"
base64 = "0.22"
# Phase D (#32) envelope sealing. zeroize scrubs unwrapped DEK bytes from memory;
# aws-sdk-kms/aws-config back the `aws` KeyWrapper (first AWS SDK in tree — the
# credential chain supports IRSA). Static-KEK + local dev never touch these.
zeroize = "1"
aws-sdk-kms = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
# v10 requires choosing exactly one crypto provider; rust_crypto keeps the
# whole tree on the pure-Rust stack (rustls/RustCrypto), no C toolchain.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# IdP-agnostic OIDC login (Phase B). default-features=false = "bring your own
# HTTP client": no bundled reqwest/native-tls — every OIDC fetch rides
# `state.http` under our own SSRF policy, and the JWKS types + signature
# primitives (CoreJsonWebKey/CoreJwsSigningAlgorithm/AccessTokenHash) come from
# the base crate (RustCrypto backends, no C toolchain). MIT/Apache-2.0.
openidconnect = { version = "4", default-features = false }
