[package]
name = "fluidbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "fluidbox"
path = "src/main.rs"

[dependencies]
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
dotenvy.workspace = true
