[package]
name = "fluidbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
globset.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
