[package]
name = "fluidbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
thiserror.workspace = true
globset.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
# Gap 12 (Phase E): validate brokered tool-call args against the run's FROZEN
# inputSchema. default-features off (no HTTP/file $ref resolution) — see the
# workspace dep note; hardened further by `schema_guard`.
jsonschema.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
proptest = "1"
