[package]
name = "fluidbox-loadgen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phase F load-test harness: drives a RUNNING fluidbox control plane and reports percentiles + an error taxonomy."

[[bin]]
name = "fluidbox-loadgen"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
# The in-process fake MCP upstream (`fakes.rs`). axum is already a workspace
# dependency and already compiled for fluidbox-server, so this adds no new
# third-party code to the tree — a hand-rolled HTTP/1.1 fake would.
axum.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
# Runtime (`sqlx::query`) only — NEVER the `query!` macros, which resolve the
# schema at COMPILE time from a live DATABASE_URL. This crate must build with
# DATABASE_URL unset, and a build that silently needs a database is exactly the
# footgun the repo's test discipline exists to prevent.
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true

# NOTE ON `rand`: deliberately absent. `rng.rs` hand-rolls SplitMix64 (~20 lines,
# unit-tested for reproducibility). A load harness's value depends on a run being
# replayable from its seed, and owning the generator makes that a property of THIS
# crate rather than of a dependency's version-to-version stream stability.
