[package]
name = "fluidbox-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluidbox-core.workspace = true
fluidbox-workspace.workspace = true
bollard.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
