[package]
name = "fluidbox-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluidbox-core.workspace = true
fluidbox-db.workspace = true
fluidbox-provider.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
sha2.workspace = true
hex.workspace = true
bytes.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
async-stream = "0.3"
