[package]
name = "fluidbox-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "fluidbox workspace lifecycle: materialization, pristine baselines, hardened diff collection"

[dependencies]
fluidbox-core = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
