[package]
name = "workspaced"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "fluidbox in-pod workspace collector: archive init + pristine-baseline diff over pods/exec"

[[bin]]
name = "workspaced"
path = "src/main.rs"

[dependencies]
fluidbox-workspace = { workspace = true }
# ureq: a small blocking HTTP client (rustls) for the init archive pull — no
# async runtime pulled into a one-shot init container.
ureq = { version = "2", default-features = false, features = ["tls"] }
